--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,9 +11,9 @@
 	Thx - Hardy
 -->
     <string name="release_4_6">
-       • Glide Ratio Widget
-       • Added ANT+ temperature widget
-       • Better memory management for large GPX tracks
+       • Glide Ratio Widget \n\n
+       • Added ANT+ temperature widget \n\n
+       • Better memory management for large GPX tracks \n\n
     </string>
     <string name="live_monitoring_adress_descr">Specify the web address with parameter syntax: lat={0}, lon={1}, timestamp={2}, hdop={3}, altitude={4}, speed={5}, bearing={6}, eta={7}, etfa={8}, eda={9}, edfa={10}.</string>
     <string name="shared_string_temperature">Temperature</string>
