Added app profile icon for Baby transport

--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,6 +10,7 @@
 	- For wording and consistency, please note https://docs.osmand.net/docs/technical/contributions/translating-osmand
 	Thx - Hardy
 -->
+    <string name="app_mode_baby_transport">Baby transport</string>
     <string name="release_4_6">
        • Glide Ratio Widget \n\n
        • Added ANT+ temperature widget \n\n
