--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,6 +10,8 @@
 	- For wording and consistency, please note https://docs.osmand.net/docs/technical/contributions/translating-osmand
 	Thx - Hardy
 -->
+    <string name="widget_available_ram_desc">Displays available memory allocated for OsmAnd.</string>
+    <string name="widget_available_ram">Available RAM</string>
     <string name="app_mode_hang_gliding">Hang gliding</string>
     <string name="app_mode_paragliding">Paragliding</string>
     <string name="max_altitude">Max altitude</string>
