--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,6 +10,8 @@
 	- For wording and consistency, please note https://docs.osmand.net/docs/technical/contributions/translating-osmand
 	Thx - Hardy
 -->
+    <string name="remove_type_q">Are you sure you want to remove \"%1$s\" type?</string>
+    <string name="add_new_type">Add new type</string>
     <string name="enable_to_use_external_input_device">Enable to use external input device with OsmAnd</string>
     <string name="key_bindings">Key bindings</string>
     <string name="external_input_device_title">External input device</string>
