--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -40,9 +40,14 @@
     <string name="max_altitude">Max altitude</string>
     <string name="app_mode_baby_transport">Baby transport</string>
     <string name="release_4_6">
-       • Glide Ratio Widget \n\n
-       • Added ANT+ temperature widget \n\n
-       • Better memory management for large GPX tracks \n\n
+       • Added \"Glide Ratio\" widget\n\n
+       • Added filters and smart folders for tracks\n\n
+       • Added rows for top and bottom widget panels with support for all widgets\n\n
+       • Added support fot ANT+ temperature widget\n\n
+       • Improved memory management for large GPX tracks\n\n
+       • Updated local resource management in Downloads\n\n
+       • Added widget \"Available RAM\"\n\n
+       • Fixed issues with transparent status bar\n\n
     </string>
     <string name="live_monitoring_adress_descr">Specify the web address with parameter syntax: lat={0}, lon={1}, timestamp={2}, hdop={3}, altitude={4}, speed={5}, bearing={6}, eta={7}, etfa={8}, eda={9}, edfa={10}.</string>
     <string name="shared_string_temperature">Temperature</string>
