--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,6 +10,8 @@
 	- For wording and consistency, please note https://docs.osmand.net/docs/technical/contributions/translating-osmand
 	Thx - Hardy
 -->
+    <string name="key_is_already_assigned_error">The \"%1$s\" key is already assigned to another action: \"%2$s\"</string>
+    <string name="press_button_to_link_with_action">Press the button on your device to link it with the chosen action.</string>
     <string name="shared_string_button">Button</string>
     <string name="shared_string_action">Action</string>
     <string name="change_key_binding">Change key binding</string>
