--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -20,10 +20,10 @@
     <string name="empty_smart_folder_description">All matching tracks will automatically appear here</string>
     <string name="discard_filter_changes">Discard filter changes</string>
     <string name="discard_filter_changes_prompt">Are you sure you want to reset all filters?</string>
-    <string name="smart_folder_saved">SmartFolder saved</string>
+    <string name="smart_folder_saved">Smart Folder saved</string>
     <string name="edit_fiilter">Edit filter</string>
     <string name="delete_smart_folder_dialog_message">This will delete \"%1$s\" smart folder.</string>
-    <string name="smart_folder_name_present">Such smartFolder already present</string>
+    <string name="smart_folder_name_present">Such smart folder already present</string>
     <string name="empty_name">Empty name</string>
     <string name="add_smart_folder">Add smart folder</string>
     <string name="save_as_smart_folder">Save as smart folder</string>
