--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,6 +10,7 @@
 	- For wording and consistency, please note https://docs.osmand.net/docs/technical/contributions/translating-osmand
 	Thx - Hardy
 -->
+    <string name="shared_string_rows">Rows</string>
     <string name="smart_folder_saved">SmartFolder saved</string>
     <string name="edit_fiilter">Edit filter</string>
     <string name="delete_smart_folder_dialog_message">This will delete \"%1$s\" smart folder.</string>
