--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -27,6 +27,10 @@
         <item quantity="one" formatted="true">%1$d (%2$d track)</item>
         <item quantity="other" formatted="true">%1$d (%2$d tracks)</item>
     </plurals>
+    <string name="shared_string_show_less">Show less</string>
+    <string name="all_folders">All folders</string>
+    <string name="root_folder">Root folder</string>
+    <string name="folder">Folder</string>
     <string name="shared_string_loading">Loading</string>
     <string name="loading_tracks">Reloading tracks</string>
     <string name="searching_matching_tracks">Search all matching tracks</string>
