--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,6 +10,7 @@
 	- For wording and consistency, please note https://docs.osmand.net/docs/technical/contributions/translating-osmand
 	Thx - Hardy
 -->
+    <string name="not_specified">Not specified</string>
     <string name="cloud_item_restored">%1$s is restored into Cloud.</string>
     <string name="shared_string_is_deleted">%1$s is deleted.</string>
     <string name="shared_string_delete_item">Delete item</string>
