--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,6 +10,7 @@
 	- For wording and consistency, please note https://docs.osmand.net/docs/technical/contributions/translating-osmand
 	Thx - Hardy
 -->
+    <string name="deletion_error">Deletion error</string>
     <string name="shared_string_rows">Rows</string>
     <string name="show_toast_about_key_pressed">Show toast about pressed key</string>
     <string name="key_is_already_assigned_error">The \"%1$s\" key is already assigned to another action: \"%2$s\"</string>
