--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,11 +10,12 @@
 	- For wording and consistency, please note https://docs.osmand.net/docs/technical/contributions/translating-osmand
 	Thx - Hardy
 -->
+    <string name="change_button">Change button</string>
     <string name="deletion_error">Deletion error</string>
     <string name="shared_string_rows">Rows</string>
     <string name="show_toast_about_key_pressed">Show toast about pressed key</string>
     <string name="key_is_already_assigned_error">The \"%1$s\" key is already assigned to another action: \"%2$s\"</string>
-    <string name="press_button_to_link_with_action">Press the button on your device to link it with the chosen action.</string>
+    <string name="press_button_to_link_with_action">Press the button on your device to bind it with the action: %1$s</string>
     <string name="shared_string_button">Button</string>
     <string name="shared_string_action">Action</string>
     <string name="change_key_binding">Change key binding</string>
