--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,6 +10,9 @@
 	- For wording and consistency, please note https://docs.osmand.net/docs/technical/contributions/translating-osmand
 	Thx - Hardy
 -->
+    <string name="see_all_plans">See all plans</string>
+    <string name="tripltek_promo">Tripltek Promo for %1$s months</string>
+    <string name="tripltek_promo_description">Free access to features including unlimited map downloads, 3D relief etc. for %1$s month</string>
     <string name="remove_widget_first">Please remove widget first</string>
     <string name="add_row">Add row</string>
     <string name="row_number">Row %1$s</string>
