--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="shared_string_rows">Rows</string>
     <string name="show_toast_about_key_pressed">Show toast about pressed key</string>
     <string name="key_is_already_assigned_error">The \"%1$s\" key is already assigned to another action: \"%2$s\"</string>
-    <string name="press_button_to_link_with_action">Press the button on your device to bind it with the action: %1$s</string>
+    <string name="press_button_to_link_with_action">Press the button on your device to assign it to the action: %1$s</string>
     <string name="shared_string_button">Button</string>
     <string name="shared_string_action">Action</string>
     <string name="change_key_binding">Change key binding</string>
