--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,6 +10,9 @@
 	- For wording and consistency, please note https://docs.osmand.net/docs/technical/contributions/translating-osmand
 	Thx - Hardy
 -->
+    <string name="clear_key_assignment_desc">Key binding for the selected action will be cleared and set to None.</string>
+    <string name="clear_key_assignment">Clear key assignment</string>
+    <string name="key_assignments">Key assignments</string>
     <string name="see_all_plans">See all plans</string>
     <string name="tripltek_promo">Tripltek Promo for %1$s months</string>
     <string name="tripltek_promo_description">Free access to features including unlimited map downloads, 3D relief etc. for %1$s month</string>
