--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,6 +10,9 @@
 	- For wording and consistency, please note https://docs.osmand.net/docs/technical/contributions/translating-osmand
 	Thx - Hardy
 -->
+    <string name="reset_key_assignments_desc">All key assignments for the selected type will be removed.</string>
+    <string name="reset_key_assignments">Reset key assignments</string>
+    <string name="shared_string_reassign">Reassign</string>
     <string name="topography_maps">Topography maps</string>
     <string name="clear_key_assignment_desc">Key binding for the selected action will be cleared and set to None.</string>
     <string name="clear_key_assignment">Clear key assignment</string>
