Fix typo in string key name

--- a/OsmAnd/res/values-ar/strings.xml
+++ b/OsmAnd/res/values-ar/strings.xml
@@ -5535,7 +5535,7 @@
     <string name="smart_folder_saved">تم حفظ الملف الذكي</string>
     <string name="add_smart_folder">أضف ملف ذكي</string>
     <string name="empty_name">اسم فارغ</string>
-    <string name="edit_fiilter">تعديل الفلتر</string>
+    <string name="edit_filter">تعديل الفلتر</string>
     <string name="save_as_smart_folder">احفظ كملف ذكي</string>
     <string name="delete_smart_folder_dialog_message">هذا سيحذف \"%1$s\" ملف ذكي.</string>
     <string name="empty_smart_folder_title">لا يوجد مسار مطابق</string>
