--- a/OsmAnd/res/values-cs/strings.xml
+++ b/OsmAnd/res/values-cs/strings.xml
@@ -5445,7 +5445,7 @@
     <string name="no_config_smart_folder_title">Není nastaveno</string>
     <string name="add_smart_folder">Přidat chytrou složku</string>
     <string name="empty_name">Prázdný název</string>
-    <string name="edit_fiilter">Upravit filtr</string>
+    <string name="edit_filter">Upravit filtr</string>
     <string name="discard_filter_changes">Zahodit změny filtru</string>
     <string name="save_as_smart_folder">Uložit jako chytrou složku</string>
     <string name="shared_string_show_icon">Zobrazit ikonu</string>
