--- a/OsmAnd/res/values-de/strings.xml
+++ b/OsmAnd/res/values-de/strings.xml
@@ -5477,7 +5477,7 @@
     <string name="help_article_navigation_setup_gpx_navigation_name">Navigieren nach Strecke</string>
     <string name="add_smart_folder">Intelligenten Ordner hinzufügen</string>
     <string name="empty_name">Leerer Name</string>
-    <string name="edit_fiilter">Filter bearbeiten</string>
+    <string name="edit_filter">Filter bearbeiten</string>
     <string name="help_article_widgets_radius_ruler_name">Radius-Maßstab und Lineal</string>
     <string name="help_article_troubleshooting_track_recording_issues_name">Streckenaufzeichnung</string>
     <string name="save_as_smart_folder">Als intelligenten Ordner speichern</string>
