--- a/OsmAnd/res/values-hu/strings.xml
+++ b/OsmAnd/res/values-hu/strings.xml
@@ -5478,7 +5478,7 @@
     <string name="smart_folder_saved">Okosmappa mentve</string>
     <string name="add_smart_folder">Okosmappa hozzáadása</string>
     <string name="empty_name">Üres név</string>
-    <string name="edit_fiilter">Szűrő szerkesztése</string>
+    <string name="edit_filter">Szűrő szerkesztése</string>
     <string name="save_as_smart_folder">Mentés okosmappaként</string>
     <string name="delete_smart_folder_dialog_message">Ez törli a következő okosmappát: %1$s.</string>
     <string name="empty_smart_folder_title">Nincs egyező nyomvonal</string>
