--- a/OsmAnd/res/values-it/strings.xml
+++ b/OsmAnd/res/values-it/strings.xml
@@ -5455,7 +5455,7 @@
     <string name="shared_string_created">Creata</string>
     <string name="wikipedia_and_travel_maps">Wikipedia e mappe di viaggio</string>
     <string name="empty_name">Nome vuoto</string>
-    <string name="edit_fiilter">Modifica i filtri</string>
+    <string name="edit_filter">Modifica i filtri</string>
     <string name="rendering_styles">Stili di rendering</string>
     <string name="sort_country_name_ascending">Nome del paese: A - Z</string>
     <string name="weather_online">Meteo online</string>
