--- a/OsmAnd/res/values-pl/strings.xml
+++ b/OsmAnd/res/values-pl/strings.xml
@@ -5424,7 +5424,7 @@
     <string name="help_article_purchases_giveaway_name">Upominek</string>
     <string name="add_smart_folder">Dodaj mądry folder</string>
     <string name="empty_name">Pusta nazwa</string>
-    <string name="edit_fiilter">Edycja filtra</string>
+    <string name="edit_filter">Edycja filtra</string>
     <string name="save_as_smart_folder">Zapisz jako mądry folder</string>
     <string name="delete_smart_folder_dialog_message">Spowoduje to usunięcie mądrego folderu „%1$s”.</string>
     <string name="release_4_5">• Czujniki BLE/ANT+: przerobione połączenie, zapis i przeglądanie otrzymanych danych do GPX
