--- a/OsmAnd/res/values-eo/strings.xml
+++ b/OsmAnd/res/values-eo/strings.xml
@@ -5509,7 +5509,7 @@
     </plurals>
     <string name="add_smart_folder">Nova inteligenta dosierujo</string>
     <string name="empty_name">Malplena nomo</string>
-    <string name="edit_fiilter">Redakti filtrilon</string>
+    <string name="edit_filter">Redakti filtrilon</string>
     <string name="key_event_action_open_search_view">Malfermi vidon “serĉi”</string>
     <string name="delete_trash_item_confirmation_desc">“%1$s” estos forigita por ĉiam. Ĉui vi certas\?
 \n
