--- a/OsmAnd/res/values-gl/strings.xml
+++ b/OsmAnd/res/values-gl/strings.xml
@@ -4141,7 +4141,7 @@
     </plurals>
     <string name="add_smart_folder">Engadir cartafol intelixente</string>
     <string name="empty_name">Nome baleiro</string>
-    <string name="edit_fiilter">Editar filtro</string>
+    <string name="edit_filter">Editar filtro</string>
     <string name="rendering_styles">Estilos de renderizado</string>
     <string name="sort_country_name_ascending">Nome do país: A – Z</string>
     <string name="live_monitoring_adress_descr">Especificar o enderezo web con sintaxe de parámetros : lat={0}, lon={1}, timestamp={2}, hdop={3}, altitude={4}, speed={5}, bearing={6}, eta={7}, etfa={8}, eda={9}, edfa={10}.</string>
