--- a/OsmAnd/res/values-ja/strings.xml
+++ b/OsmAnd/res/values-ja/strings.xml
@@ -5144,7 +5144,7 @@ POIの更新は利用できません</string>
     </plurals>
     <string name="add_smart_folder">スマートフォルダーを追加</string>
     <string name="empty_name">名前が空です</string>
-    <string name="edit_fiilter">フィルターの編集</string>
+    <string name="edit_filter">フィルターの編集</string>
     <string name="rendering_styles">表示スタイル</string>
     <string name="sort_country_name_ascending">国名:A – Z</string>
     <string name="delete_trash_item_confirmation_desc">\"%1$s\"は完全に削除されます。よろしいですか？
