--- a/OsmAnd/res/values-nb/strings.xml
+++ b/OsmAnd/res/values-nb/strings.xml
@@ -5383,7 +5383,7 @@
     <string name="standard_maps">Standardkart</string>
     <string name="shared_string_created">Opprettet</string>
     <string name="wikipedia_and_travel_maps">Wikipedia og reisekart</string>
-    <string name="edit_fiilter">Rediger filter</string>
+    <string name="edit_filter">Rediger filter</string>
     <string name="rendering_styles">Opptegningsstiler</string>
     <string name="sort_country_name_ascending">Landets navn: A – Å</string>
     <string name="shared_string_show_icon">Vis ikon</string>
