--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,6 +10,8 @@
 	- For wording and consistency, please note https://docs.osmand.net/docs/technical/contributions/translating-osmand
 	Thx - Hardy
 -->
+    <string name="key_assignments_already_cleared_message">All key assignments are already cleared</string>
+    <string name="add_new_button">Add a new button</string>
     <string name="reset_key_assignments_desc">All key assignments for the selected type will be removed.</string>
     <string name="reset_key_assignments">Reset key assignments</string>
     <string name="shared_string_reassign">Reassign</string>
