Fix release notes

--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -133,7 +133,7 @@
     <string name="max_altitude">Max altitude</string>
     <string name="app_mode_baby_transport">Baby transport</string>
     <string name="release_4_6">
-        • Android Auto: Added 3D mode and enhanced search screen\n\n
+        • Android Auto: Added 3D mode\n\n
         • Tracks: Introduced filters and smart folders, optimized memory for larger files\n\n
         • Enhanced top and bottom widget panels to accommodate all widgets\n\n
         • Improved local resource management\n\n
