--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,6 +10,8 @@
 	- For wording and consistency, please note https://docs.osmand.net/docs/technical/contributions/translating-osmand
 	Thx - Hardy
 -->
+
+    <string name="any_connected">Any connected</string>
     <string name="shared_string_next_event">Next event</string>
     <string name="map_widget_sun_position_desc">This widget shows the time until sunrise or sunset, depending on the current time.</string>
     <string name="map_widget_sun_position">Sun position</string>
