--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,6 +10,7 @@
 	- For wording and consistency, please note https://docs.osmand.net/docs/technical/contributions/translating-osmand
 	Thx - Hardy
 -->
+    <string name="precise_distance_numbers">Precise distance numbers</string>
     <string name="complex_widget_alert">%1$s widget can only be placed on its own row.</string>
     <string name="previous_row_has_complex_widget">Previous row has complex widget</string>
     <string name="shared_string_next_event">Next event</string>
